# abstract_algebra

./: README.md  pyproject.toml
abstract_algebra/abstract_structures/: euclidean_ring.py  field.py  group.py  monoid.py  ring.py
abstract_algebra/compound_structures/: fraction.py  matrix.py  vector.py
abstract_algebra/concrete_structures/: complex.py
abstract_algebra/linear_algebra/: gauss_jordan.py  matrix_operations.py  matrix_subspaces.py  solve_systems.py  vector_operations.py
tests/: test_abstract_structures.py  test_compund_structures.py  test_identity_and_inverse.py
tests/fixtures/: parameter_fixtures.py
